--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,7 @@
   "importMap": "./import_map.json",
   "lint": {
     "rules": {
-      "exclude": ["no-explicit-any", "require-await"]
+      "exclude": ["no-explicit-any", "require-await", "no-extra-semi"]
     }
   }
 }
